<resources>
    <string name="app_name">FirebaseApp</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="firebaseapp1_company">Firebase App</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out_menu_item">Sign Out</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="send_email">Send Email</string>
    <string name="go_back_to_sign_in_page">Go back to Sign In Activity</string>
    <string name="please_verify_your_email_address">Please verify your email address</string>
    <string name="failed">Failed</string>
    <string name="image_button_desc">This is the play and pause button for the video player.</string>
    <string name="select_video">Select Video</string>
    <string name="videos_activity">Videos Activity</string>
    <string name="default_value">00:00</string>
    <string name="upload_photo">upload Photo</string>
    <string name="change_photo">Change Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="upload_video">Upload Video</string>
    <string name="imageview_desc">ImageView</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="welcome_back_text">Welcome back</string>
    <string name="recyclerview_item">RecyclerView_item</string>
    <string name="add_image">Add Image</string>
</resources>