<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/firebaseimage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firebaseapp1_company"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_margin="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email_address"
        android:textSize="21sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/email_address_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email_address"
        app:layout_constraintTop_toBottomOf="@+id/email_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:background="@drawable/edit_text_border"/>

    <Button
        android:id="@+id/btn_send_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_email"
        app:layout_constraintTop_toBottomOf="@+id/email_address_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="35dp"/>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>